fix subheading contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 
 :root {
   --highlight: #f58f89;
-  --dark-highlight: #d8625c;
+  --dark-highlight: #983025;
   --background: #fffefd;
   --turq: #019d8d;
   --gray: #5c5c5c;
